Fix grid size is not fit to container size after initializing webgl.

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,24 +4,10 @@
   box-sizing: border-box;
 }
 
-.frame__github,
-.frame__links a:not(:last-child),
-.frame__demos a:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#canvas {
-  background: red;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
 .canvas {
-  // background: red;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
 }
 
 main {
@@ -33,7 +19,7 @@ main {
   padding: 1rem;
   margin: 0 auto;
   grid-template-columns: 100%;
-  grid-row-gap: 4rem;
+  // grid-row-gap: 4rem;
   grid-column-gap: 20vw;
   max-width: 1200px;
   position: relative;
@@ -42,26 +28,31 @@ main {
     height: 60vh;
     max-height: 500px;
     position: relative;
+    overflow: hidden;
+
+    // NOTE: For debug
+    // background: red;
+
+    span {
+      font-size: 15vw;
+      color: white;
+    }
   }
+
+  &__item:hover {
+    span {
+      color: black;
+      background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;      
+    }
+  }  
 
   &__item-img {
     position: relative;
     width: 100%;
     height: 100%;
     background-size: cover;
-  }
-
-  &__item-img::after {
-    content: "";
-    background: var(--color-overlay);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    mix-blend-mode: color-dodge;
-    opacity: 0;
-    transition: opacity 0.3s;
   }
 
   &__item-letter {
@@ -74,68 +65,12 @@ main {
   }
 }
 
-a {
-  text-decoration: none;
-  color: var(--color-link);
-  outline: none;
-}
-
-.frame a {
-  text-transform: lowercase;
-}
-
-.frame {
-  padding: 3rem 5vw;
-  text-align: center;
-  position: relative;
-  z-index: 1000;
-
-  &__title {
-    font-size: 1rem;
-    margin: 0 0 1rem;
-    font-weight: 500;
-  }
-
-  &__tagline {
-    color: var(--color-tagline);
-  }
-}
-
 @media screen and (min-width: 53em) {
-  .frame {
-    position: fixed;
-    text-align: left;
-    z-index: 10000;
-    top: 0;
-    left: 0;
-    display: grid;
-    align-content: space-between;
-    width: 100%;
-    max-width: none;
-    height: 100vh;
-    padding: 3rem;
-    pointer-events: none;
-    grid-template-columns: 75% 25%;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "title links"
-      "... ..."
-      "github demos";
+  .grid {    
+    padding-top: 45vh;
+    padding-left: 4rem;
+    padding-right: 4rem;
 
-    &__tagline {
-      position: relative;
-      margin: 0 0 0 1rem;
-      padding: 0 0 0 1rem;
-    }
-  }
-
-  .frame__title-wrap {
-    grid-area: title;
-    display: flex;
-  }
-
-  .grid {
-    padding: 70vh 4rem;
     grid-template-columns: repeat(2, calc(50% - 10vw));
     grid-row-gap: 50vh;
 
